hard-gists/6408165/run.log
=== Docker Run Log for 6408165 ===
Started at: Mi 29. Okt 16:30:26 CET 2025

[2025-10-29 16:30:27] START: Running container for 6408165
[2025-10-29 16:30:27] SUCCESS: Container 03b8fb1abc93fa96e2ec0f98630375bc5cb04ef0f3608b34ce47302f4e84a078 started for 6408165
=== Container logs for 6408165 ===
  File "/snippet.py", line 42
    print x_gpu
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6408165 ===
[2025-10-29 16:30:29] INFO: Container 03b8fb1abc93fa96e2ec0f98630375bc5cb04ef0f3608b34ce47302f4e84a078 has stopped
